--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -7,7 +7,7 @@
                     <h1>Hello! My name is</h1>
                 </div>
                 <div class='banner-title'>
-                    <h2>Muffeez Khalid.</h2>
+                    <h2>Test TEst.</h2>
                     <h3>MEAN / MERN Stack Developer</h3>
                 </div>
                 <div class='banner-description'>
