--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -2,27 +2,27 @@
     <div [@animateFooter]>
         <ul class="footer-left-bar d-none d-md-block">
             <li>
-                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "github")' href="https://github.com/mufeez1" target='_blank'>
+                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "github")' href="https://github.com/example" target='_blank'>
                     <i class="fab fa-github"></i>
                 </a>
             </li>
             <li>
-                <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/in/muffeez-khalid/" target='_blank'>
+                <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/in/example/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:muffeezkhalid@gmail.com" target='_blank'>muffeezkhalid@gmail.com </a>
+            <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:example@gmail.com" target='_blank'>example@gmail.com </a>
         </div>
     </div>
 
     <div class="footer-credits text-center" >
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://github.com/mufeez1" target="_blank" rel="nofollow noopener noreferrer">
-            <div>Built with Angular by Muffeez Khalid</div>
+        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://github.com/medjoudi" target="_blank" rel="nofollow noopener noreferrer">
+            <div>Built with ❤️ by Joudi</div>
         </a>
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://github.com/andresjosehr/andresjosehr-portfolio" target="_blank" rel="nofollow noopener noreferrer">
-            <div class="mt-2">Designed by Brittany Chiang & Jośe Andreś</div>
+        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://www.jridi.org" target="_blank" rel="nofollow noopener noreferrer">
+            <div class="mt-2">Designed by Anouar JRIDI & Marouen Kachroudi</div>
         </a>
     </div>
 
