--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -7,15 +7,15 @@
                     <h1>Hello! My name is</h1>
                 </div>
                 <div class='banner-title'>
-                    <h2>Test TEst.</h2>
-                    <h3>MEAN / MERN Stack Developer</h3>
+                    <h2>Med Joudi.</h2>
+                    <h3>Azure DevOps Engineer.</h3>
                 </div>
                 <div class='banner-description'>
                     <p [innerHTML]='"Banner.Description" | translate' class="mt-4"></p>
                 </div>
             </div>
             <div class="div-btn-banner">
-                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:muffeezkhalid@gmail.com" target="_black" class="main-btn">
+                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "banner", "email")' href="mailto:exemple@gmail.com" target="_black" class="main-btn">
                     {{"Banner.ActionBtn" | translate}}
                 </a>
             </div>
