--- a/src/app/components/home/banner/banner.component.scss
+++ b/src/app/components/home/banner/banner.component.scss
@@ -17,7 +17,7 @@
 
             h1 {
 
-                color: #64ffda;
+                color: $LightestSlate;
                 margin: 0 0 20px 3px;
                 font-size: 16px;
                 font-weight: normal;
@@ -31,7 +31,7 @@
                 line-height: 1.1;
                 margin: 0;
                 font-family: $MainFont;
-                background: linear-gradient(120deg, #50efb5, #8ff4ca, #7e57c2, #0087f2, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+                background: linear-gradient(120deg,#57c2c2, #0087f2);
                 color: #fff;
                 background-clip: text;
                 -webkit-background-clip: text;
