Refactor code structure for improved readability and maintainability

--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -19,10 +19,10 @@
 
     <div class="footer-credits text-center" >
         <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://github.com/medjoudi" target="_blank" rel="nofollow noopener noreferrer">
-            <div>Built with ❤️ by Joudi</div>
+            <div>Built with ❤️ by Joudi.</div>
         </a>
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://www.jridi.org" target="_blank" rel="nofollow noopener noreferrer">
-            <div class="mt-2">Designed by Anouar JRIDI & Marouen Kachroudi</div>
+        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://mkachroudi.org" target="_blank" rel="nofollow noopener noreferrer">
+            <div class="mt-2">Designed by Anouar JRIDI & Marouen KACHROUDI.</div>
         </a>
     </div>
 
