--- a/src/app/components/general/header/header.component.scss
+++ b/src/app/components/general/header/header.component.scss
@@ -64,7 +64,7 @@
         -webkit-box-align: center;
         align-items: center;
         flex-direction: column;
-        background-color: $LightNavy;
+        background-color: $LightSlate;
         height: 100%;
         position: relative;
         right: -625px;
@@ -137,10 +137,12 @@
         left: 0;
         right: 0;
         bottom: 0;
-        width: 36px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
+        align-items: center;
+        justify-content: center;
         cursor: pointer;
-        z-index: 11;
+        z-index: 100;
         .hamburger-menu,
         .hamburger-menu:after,
         .hamburger-menu:before {
