--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -7,8 +7,8 @@
                     <h1>Hello! My name is</h1>
                 </div>
                 <div class='banner-title'>
-                    <h2>Med Joudi.</h2>
-                    <h3>Azure DevOps Engineer.</h3>
+                    <h2>Marouen Kachroudi.</h2>
+                    <h3>Lecturer / Phd. / MCT</h3>
                 </div>
                 <div class='banner-description'>
                     <p [innerHTML]='"Banner.Description" | translate' class="mt-4"></p>
