--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -3,11 +3,11 @@
         <div class="section-box">
             <div data-aos="fade-up" data-aos-duration="1000">
                 <h3 class="section-title">
-                    <span class='n-section-title'>03.</span> {{"FeatureProjects.Title" | translate}}
+                    <span class='n-section-title'>03.</span> Recent Blog Posts
                 </h3>
             </div>
 
-            <div *ngFor='let project of "FeatureProjects.Projects" | translate; let i = index' class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
+            <div *ngFor='let project of recentPosts; let i = index' class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <owl-carousel-o class='owl-carousel-o' [options]="customOptions" *ngIf="i%2==0">
                     <ng-container *ngFor="let img of project.imgs">
                         <ng-template carouselSlide [id]="project.Title+slide+i">
@@ -26,7 +26,7 @@
                 </div>
                 <div [class.proyect-info-right]='i%2==0' [class.proyect-info-left]='i%2!=0' class="h-100" style="background-image: url('{{project.img}}');">
                     <div class="proyect-box">
-                        <h4 [class.text-right]='i%2==0' [class.text-left]='i%2!=0' class="feature-proyect">{{"FeatureProjects.Label" | translate}}</h4>
+                        <h4 [class.text-right]='i%2==0' [class.text-left]='i%2!=0' class="feature-proyect">{{ project.Date }}</h4>
                         <h5 [class.text-right]='i%2==0' [class.text-left]='i%2!=0' class="proyect-name">{{project.Title}}</h5>
 
                         <div class="proyect-description-box" (click)='debug()'>
@@ -39,8 +39,11 @@
                             </li>
                         </ul>
                         <div [class.text-right]='i%2==0' [class.text-left]='i%2!=0' class="proyect-links">
-                            <a *ngIf="project['ghLink']" style='color: inherit' [href]="project['ghLink']" target="_blank"><i class="ml-3 fab fa-github"></i></a>
-                            <a *ngIf="project['demoLink']" style='color: inherit' [href]="project['demoLink']" target="_blank"><i class="ml-3 fas fa-external-link-alt"></i></a>
+                            <a *ngIf="project['id']"
+                            (click)="goToPost(project.id)"
+                            style="color: inherit; cursor: pointer;">
+                            <i class="ml-3 fas fa-external-link-alt"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -62,6 +65,11 @@
                 </div>
             </div>
             <div>
+                <div class="text-center mt-5">
+                    <button class="main-btn cv-btn" (click)="goToBlog()">
+                        Wanna see more? <i class="fas fa-arrow-right ml-2"></i>
+                      </button>
+                  </div>
             </div>
         </div>
     </div>
