--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,10 +4,10 @@
 $Navy         : #ffffff; /* Background color */
 $LightNavy    : #112240;
 $LightestNavy : #303C55; 
-$Slate        : #8892b0;
+$Slate        : #1d2232;
 $LightSlate   : #a8b2d1;
 $LightestSlate: #003264; /* menu text color */
-$White        : #e6f1ff;
+$White        : #000000;
 $Green        : #007fff; /* Numbers + Highlights */
 $GreenOpacity : rgba(100,255,218,0.07);
 
