--- a/src/app/blog/blog-list/blog-list.component.scss
+++ b/src/app/blog/blog-list/blog-list.component.scss
@@ -2,15 +2,20 @@
 
 .blog-container {
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 30px auto;
   padding: 100px 20px;
   color: $LightestSlate;
+  padding-left: 80px;
+  padding-right: 80px;
+  
 
   .blog-header {
     display: flex;
     align-items: center;
     margin-bottom: 50px;
     font-family: $CodeFont;
+    
+
 
     h1 {
       font-size: clamp(26px, 5vw, 32px);
@@ -41,21 +46,22 @@
   }
 
   .post-card {
-    background-color: $Slate;
-    color: $LightSlate;
+    background-color: $LightSlate;
+    color: $LightNavy;
     border-radius: 5px;
     padding: 30px;
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-    border-left: 2px solid $Green;
+    
 
     &:hover {
       transform: translateY(-5px);
       box-shadow: 0 10px 30px -15px rgba(2, 12, 27, 0.7);
+      border-left: 5px solid $Green;
     }
 
     a{
       text-decoration: none;
-      color: $Navy;
+      color: $LightNavy;
   
       &:hover{
           text-decoration: none;
