--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,6 +2,7 @@
 
 
 $Navy         : #ffffff; /* Background color */
+$NavyClear    : #dedddd;
 $LightNavy    : #112240;
 $LightestNavy : #303C55; 
 $Slate        : #1d2232;
