--- a/src/app/blog/blog-list/blog-list.component.scss
+++ b/src/app/blog/blog-list/blog-list.component.scss
@@ -1,116 +1,160 @@
+// blog-list.component.scss
 @import "./../../../variables.scss";
 
 .blog-container {
-  max-width: 1000px;
-  margin: 30px auto;
-  padding: 100px 20px;
+  padding: 100px 0;
   color: $LightestSlate;
-  padding-left: 80px;
-  padding-right: 80px;
-  
+  max-width: 1200px;
+  margin: 0 auto;
 
-  .blog-header {
+  .section-box {
+    padding: 0 50px;
+  }
+
+  .section-title {
     display: flex;
     align-items: center;
-    margin-bottom: 50px;
     font-family: $CodeFont;
-    
+    color: $LightestSlate;
+    font-size: clamp(26px, 5vw, 32px);
+    white-space: nowrap;
+    margin-bottom: 50px;
 
-
-    h1 {
-      font-size: clamp(26px, 5vw, 32px);
-      font-weight: 600;
-      color: $LightestSlate;
-      margin: 0;
-      line-height: 1.1;
-
-      &:before {
-        content: "03.";
-        margin-right: 10px;
-        color: $Green;
-        font-size: clamp(16px, 3vw, 20px);
-      }
+    .n-section-title {
+      margin-right: 10px;
+      color: $Green;
+      font-family: $CodeFont;
+      font-size: clamp(16px, 3vw, 20px);
     }
 
-    .divider {
-      flex-grow: 1;
+    &::after {
+      content: "";
+      display: block;
       height: 1px;
+      width: 300px;
       background-color: $LightestNavy;
       margin-left: 20px;
     }
   }
 
-  .post-list {
+  .posts-grid-container {
+    width: 100%;
+  }
+
+  .posts-grid {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 30px;
+    margin-top: 50px;
   }
 
   .post-card {
-    background-color: $LightSlate;
-    color: $LightNavy;
-    border-radius: 5px;
-    padding: 30px;
+    background-color: $NavyClear;
+    border-radius: 3px;
+    padding: 25px;
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-    
+    height: 100%;
 
     &:hover {
+      background-color: $LightSlate;
       transform: translateY(-5px);
       box-shadow: 0 10px 30px -15px rgba(2, 12, 27, 0.7);
-      border-left: 5px solid $Green;
     }
 
-    a{
-      text-decoration: none;
-      color: $LightNavy;
-  
-      &:hover{
-          text-decoration: none;
-          color: $Green;
-      }
+    .post-content {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
     }
 
     .post-date {
+      font-size: 13px;
+      font-weight: normal;
+      color: $Green;
       font-family: $CodeFont;
-      font-size: 14px;
-      color: $LightSlate;
+      margin-top: 0;
       margin-bottom: 10px;
     }
 
     .post-title {
-      font-size: 22px;
-      color: $Navy;
-      margin: 0 0 15px;
-      transition: color 0.25s ease;
+      font-size: 24px;
+      margin: 0 0 20px;
+      color: $LightestSlate;
     }
 
-    .post-summary {
-      color: $Navy;
-      margin-bottom: 15px;
+    .post-description {
+      flex-grow: 1;
+      margin-bottom: 20px;
+      color: $Slate;
+      font-size: 16px;
       line-height: 1.5;
     }
 
-    .read-more {
-      font-family: $CodeFont;
-      font-size: 14px;
-      color: $Navy;
-      text-decoration: none;
-      display: inline-block;
-      position: relative;
+    .post-tags {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0;
+      margin: 0 0 10px;
+      list-style: none;
 
-      &:after {
-        content: '';
-        display: block;
-        width: 0;
-        height: 1px;
-        background: $Green;
-        transition: width 0.3s;
-        position: absolute;
-        bottom: -3px;
-      }
+      li {
+        margin-right: 15px;
+        font-family: $CodeFont;
+        font-size: 13px;
+        color: $Slate;
 
-      &:hover:after {
-        width: 100%;
+        .underline {
+          padding-bottom: 5px;
+        }
       }
     }
+
+    .post-link {
+      margin-top: auto;
+      text-align: right;
+
+      i {
+        font-size: 22px;
+        transition: color 0.2s ease-in-out;
+
+        &:hover {
+          color: $Green;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    .section-box {
+      padding: 0 20px;
+    }
+
+    .posts-grid {
+      grid-template-columns: 1fr;
+      gap: 20px;
+    }
+
+    .post-card {
+      padding: 20px;
+    }
+  }
+
+  /* Scrollbar styling */
+  ::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #8892b0;
+    border-radius: 3px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: $Green;
+    border-radius: 3px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: $Green;
   }
 }
