--- a/src/app/blog/blog-post/blog-post.component.html
+++ b/src/app/blog/blog-post/blog-post.component.html
@@ -32,8 +32,8 @@
     <!-- Post Header -->
     <div class="post-header">
       <div class="meta-info">
-        <span class="post-date">{{ postMetadata.date | date:'mediumDate' }}</span>
-        <span *ngIf="postMetadata.author" class="post-author">By {{ postMetadata.author }}</span>
+        <span class="post-date">{{ postMetadata.date | date:'mediumDate' }}</span> 
+        <span class="">by</span> <span *ngIf="postMetadata.author" class="post-author">{{ postMetadata.author }}</span>
       </div>
       <h1 class="post-title">{{ postMetadata.title }}</h1>
       <p *ngIf="postMetadata.subtitle" class="post-subtitle">{{ postMetadata.subtitle }}</p>
@@ -45,7 +45,7 @@
     </div>
 
     <!-- Post Content -->
-    <div class="post-content" markdown [data]="postContent"></div>
+    <div class="post-content" [innerHTML]="postContent"></div>
 
     <!-- Post Footer -->
     <div class="post-footer">
