--- a/src/app/components/home/proyects/proyects.component.scss
+++ b/src/app/components/home/proyects/proyects.component.scss
@@ -38,7 +38,7 @@
                 position: relative;
                 z-index: 2;
                 padding: 25px;
-                background-color: $LightSlate;
+                background-color: $NavyClear;
                 color: $LightNavy;
                 font-size: 18px;
                 border-radius: 3px;
