--- a/src/app/blog/blog-list/blog-list.component.scss
+++ b/src/app/blog/blog-list/blog-list.component.scss
@@ -8,7 +8,7 @@
   margin: 0 auto;
 
   .section-box {
-    padding: 0 50px;
+    padding: 0;
   }
 
   .section-title {
@@ -43,48 +43,61 @@
 
   .posts-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
     margin-top: 50px;
   }
 
   .post-card {
     background-color: $NavyClear;
-    border-radius: 3px;
-    padding: 25px;
+    border-radius: 8px;
+    padding: 5px;
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 
     &:hover {
-      background-color: $LightSlate;
+      background-color: $NavyClear;
       transform: translateY(-5px);
       box-shadow: 0 10px 30px -15px rgba(2, 12, 27, 0.7);
     }
 
+    img {
+      width: 100%;
+      height: 200px; /* Fixed height for all images */
+      object-fit: cover; /* Ensures images fill space without distortion */
+      object-position: center; /* Centers the image focal point */
+      border-radius: 8px 8px 0 0; /* Matches card's border radius on top */
+      display: block; /* Removes any default spacing */
+    }
+
     .post-content {
       height: 100%;
+      min-height: 0;
+      padding: 10px;
+      overflow: auto;
+      flex: 1;
       display: flex;
       flex-direction: column;
     }
+
 
     .post-date {
       font-size: 13px;
       font-weight: normal;
       color: $Green;
       font-family: $CodeFont;
-      margin-top: 0;
-      margin-bottom: 10px;
     }
 
     .post-title {
       font-size: 24px;
-      margin: 0 0 20px;
+      //margin: 15px 0 15px 15px;
       color: $LightestSlate;
     }
 
     .post-description {
-      flex-grow: 1;
-      margin-bottom: 20px;
       color: $Slate;
       font-size: 16px;
       line-height: 1.5;
@@ -94,11 +107,10 @@
       display: flex;
       flex-wrap: wrap;
       padding: 0;
-      margin: 0 0 10px;
       list-style: none;
 
       li {
-        margin-right: 15px;
+        margin-right: 5px;
         font-family: $CodeFont;
         font-size: 13px;
         color: $Slate;
@@ -110,16 +122,12 @@
     }
 
     .post-link {
-      margin-top: auto;
-      text-align: right;
+      display: flex;
+      align-items: left; 
+      justify-content: left;
 
-      i {
-        font-size: 22px;
+      button {
         transition: color 0.2s ease-in-out;
-
-        &:hover {
-          color: $Green;
-        }
       }
     }
   }
