--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -12,16 +12,12 @@
                         <p *ngFor='let text of "AboutMe.Paragraphs" | translate' [innerHTML]="text" data-aos="fade-up" data-aos-duration="1000">
                         </p>
                         <ul class="skills-list" data-aos="fade-up">
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Angular, React </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">RxJS, Redux, NgRx </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">HTML &amp; (S)CSS </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">NodeJS </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">ExpressJS, NestJS </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Python </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Jasmine / Karma (TDD) </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">CI / CD </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">JavaScript, TypeScript </span></li>
-                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Bootstrap, Material, PrimeFaces, Tailwind </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Lecturer & Researcher </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Academic Program Development </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Thesis & Dissertation Supervision </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Scientific Publications & Conferences </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Higher Education Pedagogy </span></li>
+                            <li class="skill-element" data-aos="fade-up" data-aos-duration="1000"><span class="underline">Academic Leadership & Administration </span></li>
                         </ul>
                     </div>
                 </div>
