--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-12 col-md-6 mt-4 mt-md-0 text-center" data-aos="fade-up" data-aos-duration="1000">
                     <div class="about-img-container">
-                        <img (click)='analyticsService.sendAnalyticEvent("click_image", "about", "image")'  width="300" height="450" src="assets/images/me/body.png" alt="Git User">
+                        <img (click)='analyticsService.sendAnalyticEvent("click_image", "about", "image")'  height="600" src="assets/images/me/body.png" alt="Git User">
                     </div>
                 </div>
 
